--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Willkommen Klee Fans!</title>
   </head>
   <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/yVtMpchxnnQ?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+  <iframe frameborder="0" height="100%" width="100%"
+    src="https://www.youtube.com/embed/yVtMpchxnnQ??autoplay=1&controls=0&showinfo=0&autohide=1" allowfullscreen>
+  </iframe>
+</div>
   </body>
 </html>
