--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
   <iframe frameborder="0" height="100%" width="100%"
-    src="https://www.youtube.com/embed/yVtMpchxnnQ?autoplay=1&controls=0&showinfo=0 allow="autoplay; fullscreen>
+    src="https://www.youtube.com/embed/yVtMpchxnnQ?autoplay=1&controls=0&showinfo=0&mute=1 allow="autoplay; fullscreen>
   </iframe>
 </div>
   </body>
