--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Willkommen Klee Fans!</title>
+    <title>Willkommen Klee Fans!</title><link rel="stylesheet" href="purecookie.css"/>
+<script src="purecookie.js"></script>
   </head>
   <body>
     <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
