--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script type="text/javascript" src="counter.js"></script>
+    <link rel="stylesheet" href="mirimoe.css">
     <title>Willkommen Klee Fans!</title>
   </head>
-  <body>
+  <body><div class="container">
+  <div id="countdown">
+    <ul>
+      <li><span id="days"></span>days</li>
+      <li><span id="hours"></span>Hours</li>
+      <li><span id="minutes"></span>Minutes</li>
+      <li><span id="seconds"></span>Seconds</li>
+    </ul>
+  </div>
+</div>
     <div style="position: fixed; width: 100%; height: 100%">
   <iframe frameborder="0" height="100%" width="100%"
-    src="https://www.youtube-nocookie.com/embed/yVtMpchxnnQ?autoplay=1&controls=0&showinfo=0&mute=1 allow="autoplay; fullscreen">
+    src="https://www.youtube-nocookie.com/embed/yVtMpchxnnQ?autoplay=1&controls=1&showinfo=0&mute=1" allow="autoplay; fullscreen">
   </iframe>
 </div>
   </body>
