--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body><div class="container">
   <div id="countdown">
     <ul>
-      <li><span id="days"></span>days</li>
-      <li><span id="hours"></span>Hours</li>
-      <li><span id="minutes"></span>Minutes</li>
-      <li><span id="seconds"></span>Seconds</li>
+      <li><span id="days"></span>Tage</li>
+      <li><span id="hours"></span>Stunden</li>
+      <li><span id="minutes"></span>Minuten</li>
+      <li><span id="seconds"></span>Sekunden</li>
     </ul>
   </div>
 </div>
