--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="mirimoe.css">
     <title>Willkommen Klee Fans!</title>
   </head>
-  <body><div class="container">
+  <body>
+    <div class="container">
   <div id="countdown">
+    <h1>Klee kommt zurück zu uns in:</h1>
     <ul>
       <li><span id="days"></span>Tage</li>
       <li><span id="hours"></span>Stunden</li>
