--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="countdown">
     <h1>Klee kommt zurück zu uns in:</h1>
     <ul>
-      <li><span id="days"></span>Tage</li>
+      <li><span id="days"></span>Tagen</li>
       <li><span id="hours"></span>Stunden</li>
       <li><span id="minutes"></span>Minuten</li>
       <li><span id="seconds"></span>Sekunden</li>
