--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
   <body>
     <div class="container">
   <div id="countdown">
-    <h1>Elden Ring kommt in</h1>
-    <ul>
-      <li><span id="days"></span>Tagen</li>
-      <li><span id="hours"></span>Stunden</li>
-      <li><span id="minutes"></span>Minuten</li>
-      <li><span id="seconds"></span>Sekunden</li>
-    </ul>
+    <h1>So long fellow tarnished</h1>
   </div>
 </div>
     <div style="position: fixed; width: 100%; height: 100%">
